[package]
name = "rs_web_component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"

[dependencies.web-sys]
version = "0.3.66"

features = [
    'HtmlElement',
]      