[package]
name = "rs-web-component"
version = "0.1.0"
edition = "2021"

authors = ["YuriyRum<rumyua@gmail.com>"]
description = "Helps to create a custom element for a web project"
readme = "README.md"
homepage="https://github.com/YuriyRum/rs_web_component/"
repository = "https://github.com/YuriyRum/rs_web_component/"
license = "MIT"
keywords = ["web", "wasm", "web component", "custom element"]
exclude = ["/target", ".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"

[dependencies.web-sys]
version = "0.3.66"

features = [
    'HtmlElement',
]      