[package]
name = "rs_web_component"
version = "0.1.1"
edition = "2021"

authors = ["YuriyRum<rumyua@gmail.com>"]
description = "Helps to create a custom element for a web project"
readme = "README.md"
homepage="https://github.com/YuriyRum/rs_web_component/"
repository = "https://github.com/YuriyRum/rs_web_component/"
license = "MIT"
keywords = ["web", "wasm"]
exclude = ["/target", ".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"

[dependencies.web-sys]
version = "0.3.66"

features = [
    'HtmlElement',
]      