[package]
name = "material_two_line_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"
rs_web_component = {path='../../'}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"

[dependencies.web-sys]
version = "0.3.66"

features = [
    'Window',
    'Document',
    'HtmlElement',
    'HtmlTemplateElement',
    'ShadowRoot',
    'ShadowRootInit',
    'ShadowRootMode',
]      

